--- a/RecipeCookbook.csproj
+++ b/RecipeCookbook.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Image\AboutUs\Profile.jpg" />
     <None Remove="Image\BannerFood.png" />
     <None Remove="Image\Bannermenu.jpg" />
     <None Remove="Image\Country\404.png" />
@@ -57,6 +58,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Image\AboutUs\Profile.jpg" />
     <Resource Include="Image\Country\404.png" />
     <Resource Include="Image\DashboardWindow\Close.png" />
     <Resource Include="Image\DashboardWindow\Country.png" />
