--- a/RecipeCookbook.csproj
+++ b/RecipeCookbook.csproj
@@ -9,9 +9,54 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Image\AboutUs\facebook.png" />
+    <None Remove="Image\AboutUs\git.png" />
+    <None Remove="Image\AboutUs\Hea Kruy.jpg" />
+    <None Remove="Image\AboutUs\IG.png" />
+    <None Remove="Image\AboutUs\linkedin.png" />
+    <None Remove="Image\AboutUs\Luke.jpg" />
+    <None Remove="Image\AboutUs\Profile facebooks.jpg" />
     <None Remove="Image\AboutUs\Profile.jpg" />
+    <None Remove="Image\AboutUs\Teacher.jpg" />
+    <None Remove="Image\AboutUs\telegram.png" />
+    <None Remove="Image\AboutUs\X.png" />
     <None Remove="Image\BannerFood.png" />
     <None Remove="Image\Bannermenu.jpg" />
+    <None Remove="Image\BookMenu\amok.jpg" />
+    <None Remove="Image\BookMenu\Amok1.jpg" />
+    <None Remove="Image\BookMenu\Amok2.jpg" />
+    <None Remove="Image\BookMenu\Bakso-bn.png" />
+    <None Remove="Image\BookMenu\Bakso1.png" />
+    <None Remove="Image\BookMenu\Bakso2.png" />
+    <None Remove="Image\BookMenu\Banh-khot-bn.png" />
+    <None Remove="Image\BookMenu\banh-mi.png" />
+    <None Remove="Image\BookMenu\Banh1.png" />
+    <None Remove="Image\BookMenu\Banh2.png" />
+    <None Remove="Image\BookMenu\BanhMi1.png" />
+    <None Remove="Image\BookMenu\BanhMi2.png" />
+    <None Remove="Image\BookMenu\Baycha.jpg" />
+    <None Remove="Image\BookMenu\BayCha1.png" />
+    <None Remove="Image\BookMenu\BayCha2.png" />
+    <None Remove="Image\BookMenu\Brahok-bn.png" />
+    <None Remove="Image\BookMenu\Brahok1.png" />
+    <None Remove="Image\BookMenu\Brahok2.png" />
+    <None Remove="Image\BookMenu\cao-lau-bn.png" />
+    <None Remove="Image\BookMenu\Caolau1.png" />
+    <None Remove="Image\BookMenu\Caolau2.png" />
+    <None Remove="Image\BookMenu\Green-Curry-bn.png" />
+    <None Remove="Image\BookMenu\GreenCurry1.png" />
+    <None Remove="Image\BookMenu\GreenCurry2.png" />
+    <None Remove="Image\BookMenu\Korko.jpg" />
+    <None Remove="Image\BookMenu\korko1.jpg" />
+    <None Remove="Image\BookMenu\korko2.jpg" />
+    <None Remove="Image\BookMenu\Mju-bn.png" />
+    <None Remove="Image\BookMenu\Mju1.png" />
+    <None Remove="Image\BookMenu\Mju2.png" />
+    <None Remove="Image\BookMenu\Num1.jpg" />
+    <None Remove="Image\BookMenu\Num2.jpg" />
+    <None Remove="Image\BookMenu\Tofu1.png" />
+    <None Remove="Image\BookMenu\Tofu2.png" />
+    <None Remove="Image\BookMenu\Tofubn.png" />
     <None Remove="Image\Country\404.png" />
     <None Remove="Image\DashboardWindow\Close.png" />
     <None Remove="Image\DashboardWindow\Country.png" />
@@ -27,6 +72,13 @@
     <None Remove="Image\Dashbord\khmer3.jpg" />
     <None Remove="Image\Dashbord\slide1.jpg" />
     <None Remove="Image\Food.png" />
+    <None Remove="Image\FoodBanner03.png" />
+    <None Remove="Image\FoodBanner04.png" />
+    <None Remove="Image\FoodBanner05.png" />
+    <None Remove="Image\FoodBanner06.png" />
+    <None Remove="Image\FoodBanner07.png" />
+    <None Remove="Image\FoodBanner08.png" />
+    <None Remove="Image\FoodBanner09.png" />
     <None Remove="Image\fresh-red.png" />
     <None Remove="Image\Home\broccoli.png" />
     <None Remove="Image\Home\bunch-broccoli.png" />
@@ -42,7 +94,11 @@
     <None Remove="Image\Home\tomato.png" />
     <None Remove="Image\numpjuk.jpg" />
     <None Remove="Image\Recipe\amok.jpg" />
+    <None Remove="Image\Recipe\Bakso.png" />
+    <None Remove="Image\Recipe\banh-khot.png" />
+    <None Remove="Image\Recipe\BanhMi.png" />
     <None Remove="Image\Recipe\bay-cha.jpg" />
+    <None Remove="Image\Recipe\cao-lau.png" />
     <None Remove="Image\Recipe\crab-stir-fried.jpg" />
     <None Remove="Image\Recipe\footerRecipe.png" />
     <None Remove="Image\Recipe\green-curry.jpg" />
@@ -52,13 +108,59 @@
     <None Remove="Image\Recipe\slide01.png" />
     <None Remove="Image\Recipe\slide02.png" />
     <None Remove="Image\Recipe\sweet-pork.jpg" />
+    <None Remove="Image\Recipe\tofu.png" />
     <None Remove="Image\salad.png" />
     <None Remove="Image\slidefood.png" />
     <None Remove="Image\tomato.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Image\AboutUs\facebook.png" />
+    <Resource Include="Image\AboutUs\git.png" />
+    <Resource Include="Image\AboutUs\Hea Kruy.jpg" />
+    <Resource Include="Image\AboutUs\IG.png" />
+    <Resource Include="Image\AboutUs\linkedin.png" />
+    <Resource Include="Image\AboutUs\Luke.jpg" />
+    <Resource Include="Image\AboutUs\Profile facebooks.jpg" />
     <Resource Include="Image\AboutUs\Profile.jpg" />
+    <Resource Include="Image\AboutUs\Teacher.jpg" />
+    <Resource Include="Image\AboutUs\telegram.png" />
+    <Resource Include="Image\AboutUs\X.png" />
+    <Resource Include="Image\BookMenu\amok.jpg" />
+    <Resource Include="Image\BookMenu\Amok1.jpg" />
+    <Resource Include="Image\BookMenu\Amok2.jpg" />
+    <Resource Include="Image\BookMenu\Bakso-bn.png" />
+    <Resource Include="Image\BookMenu\Bakso1.png" />
+    <Resource Include="Image\BookMenu\Bakso2.png" />
+    <Resource Include="Image\BookMenu\Banh-khot-bn.png" />
+    <Resource Include="Image\BookMenu\banh-mi.png" />
+    <Resource Include="Image\BookMenu\Banh1.png" />
+    <Resource Include="Image\BookMenu\Banh2.png" />
+    <Resource Include="Image\BookMenu\BanhMi1.png" />
+    <Resource Include="Image\BookMenu\BanhMi2.png" />
+    <Resource Include="Image\BookMenu\Baycha.jpg" />
+    <Resource Include="Image\BookMenu\BayCha1.png" />
+    <Resource Include="Image\BookMenu\BayCha2.png" />
+    <Resource Include="Image\BookMenu\Brahok-bn.png" />
+    <Resource Include="Image\BookMenu\Brahok1.png" />
+    <Resource Include="Image\BookMenu\Brahok2.png" />
+    <Resource Include="Image\BookMenu\cao-lau-bn.png" />
+    <Resource Include="Image\BookMenu\Caolau1.png" />
+    <Resource Include="Image\BookMenu\Caolau2.png" />
+    <Resource Include="Image\BookMenu\Green-Curry-bn.png" />
+    <Resource Include="Image\BookMenu\GreenCurry1.png" />
+    <Resource Include="Image\BookMenu\GreenCurry2.png" />
+    <Resource Include="Image\BookMenu\Korko.jpg" />
+    <Resource Include="Image\BookMenu\korko1.jpg" />
+    <Resource Include="Image\BookMenu\korko2.jpg" />
+    <Resource Include="Image\BookMenu\Mju-bn.png" />
+    <Resource Include="Image\BookMenu\Mju1.png" />
+    <Resource Include="Image\BookMenu\Mju2.png" />
+    <Resource Include="Image\BookMenu\Num1.jpg" />
+    <Resource Include="Image\BookMenu\Num2.jpg" />
+    <Resource Include="Image\BookMenu\Tofu1.png" />
+    <Resource Include="Image\BookMenu\Tofu2.png" />
+    <Resource Include="Image\BookMenu\Tofubn.png" />
     <Resource Include="Image\Country\404.png" />
     <Resource Include="Image\DashboardWindow\Close.png" />
     <Resource Include="Image\DashboardWindow\Country.png" />
@@ -79,6 +181,13 @@
     <Resource Include="Image\Dashbord\slide1.jpg" />
     <Resource Include="Image\Dashbord\slidefood.png" />
     <Resource Include="Image\Food.png" />
+    <Resource Include="Image\FoodBanner03.png" />
+    <Resource Include="Image\FoodBanner04.png" />
+    <Resource Include="Image\FoodBanner05.png" />
+    <Resource Include="Image\FoodBanner06.png" />
+    <Resource Include="Image\FoodBanner07.png" />
+    <Resource Include="Image\FoodBanner08.png" />
+    <Resource Include="Image\FoodBanner09.png" />
     <Resource Include="Image\fresh-red.png" />
     <Resource Include="Image\Home\broccoli.png" />
     <Resource Include="Image\Home\bunch-broccoli.png" />
@@ -94,7 +203,11 @@
     <Resource Include="Image\Home\tomato.png" />
     <Resource Include="Image\numpjuk.jpg" />
     <Resource Include="Image\Recipe\amok.jpg" />
+    <Resource Include="Image\Recipe\Bakso.png" />
+    <Resource Include="Image\Recipe\banh-khot.png" />
+    <Resource Include="Image\Recipe\BanhMi.png" />
     <Resource Include="Image\Recipe\bay-cha.jpg" />
+    <Resource Include="Image\Recipe\cao-lau.png" />
     <Resource Include="Image\Recipe\crab-stir-fried.jpg" />
     <Resource Include="Image\Recipe\footerRecipe.png" />
     <Resource Include="Image\Recipe\green-curry.jpg" />
@@ -104,6 +217,7 @@
     <Resource Include="Image\Recipe\slide01.png" />
     <Resource Include="Image\Recipe\slide02.png" />
     <Resource Include="Image\Recipe\sweet-pork.jpg" />
+    <Resource Include="Image\Recipe\tofu.png" />
     <Resource Include="Image\salad.png" />
     <Resource Include="Image\tomato.png" />
   </ItemGroup>
