--- a/RecipeCookbook.csproj
+++ b/RecipeCookbook.csproj
@@ -61,9 +61,12 @@
     <None Remove="Image\DashboardWindow\Close.png" />
     <None Remove="Image\DashboardWindow\Country.png" />
     <None Remove="Image\DashboardWindow\Dashboard.png" />
+    <None Remove="Image\DashboardWindow\excel.png" />
     <None Remove="Image\DashboardWindow\Home.png" />
     <None Remove="Image\DashboardWindow\logochefe.png" />
     <None Remove="Image\DashboardWindow\Recipe.png" />
+    <None Remove="Image\DashboardWindow\txt.png" />
+    <None Remove="Image\DashboardWindow\word.png" />
     <None Remove="Image\Dashbord\allFood.jpg" />
     <None Remove="Image\Dashbord\allFood1.jpeg" />
     <None Remove="Image\Dashbord\khmer.jpeg" />
@@ -71,6 +74,75 @@
     <None Remove="Image\Dashbord\khmer2.jpg" />
     <None Remove="Image\Dashbord\khmer3.jpg" />
     <None Remove="Image\Dashbord\slide1.jpg" />
+    <None Remove="Image\FoodImage\adobo.jpg" />
+    <None Remove="Image\FoodImage\adobo1.jpg" />
+    <None Remove="Image\FoodImage\Batar-daan.jpg" />
+    <None Remove="Image\FoodImage\batar-daan1.jpg" />
+    <None Remove="Image\FoodImage\caril.jpg" />
+    <None Remove="Image\FoodImage\caril1.jpg" />
+    <None Remove="Image\FoodImage\Char-Kway-Teow-Malaysia.jpg" />
+    <None Remove="Image\FoodImage\char-kway-teow-Malaysia1.jpg" />
+    <None Remove="Image\FoodImage\Char-Kway-Teow-Singapore.jpg" />
+    <None Remove="Image\FoodImage\char-kway-toew-singapore1.jpg" />
+    <None Remove="Image\FoodImage\chilli-crab.jpg" />
+    <None Remove="Image\FoodImage\chilli-crab1.jpg" />
+    <None Remove="Image\FoodImage\crispy-rice-salad1.jpg" />
+    <None Remove="Image\FoodImage\Feijoada Timorense.jpg" />
+    <None Remove="Image\FoodImage\Feijoada Timorense1.jpg" />
+    <None Remove="Image\FoodImage\fish head curry.jpg" />
+    <None Remove="Image\FoodImage\Fish-Head-Curry1.jpg" />
+    <None Remove="Image\FoodImage\goi-cuon.jpg" />
+    <None Remove="Image\FoodImage\green-papaya-salad1.jpg" />
+    <None Remove="Image\FoodImage\Hainanese-Chicken-Rice.jpg" />
+    <None Remove="Image\FoodImage\Hainanese-Chicken-Rice1.jpg" />
+    <None Remove="Image\FoodImage\Halo-Halo.jpg" />
+    <None Remove="Image\FoodImage\Halo-Halo1.jpg" />
+    <None Remove="Image\FoodImage\Hokkein-Mee.jpg" />
+    <None Remove="Image\FoodImage\Hokkien-Mee1.jpg" />
+    <None Remove="Image\FoodImage\ikan-pepes.jpg" />
+    <None Remove="Image\FoodImage\ikan-pepes1.jpg" />
+    <None Remove="Image\FoodImage\Indonesian_Satay.jpg" />
+    <None Remove="Image\FoodImage\Indonesian_Satay1.jpg" />
+    <None Remove="Image\FoodImage\Kao-Piek-sen1.jpg" />
+    <None Remove="Image\FoodImage\kare kare.jpg" />
+    <None Remove="Image\FoodImage\kare-kare1.jpg" />
+    <None Remove="Image\FoodImage\khao-piak-sen.jpg" />
+    <None Remove="Image\FoodImage\khao-soi.jpg" />
+    <None Remove="Image\FoodImage\khmer-red-curry.jpg" />
+    <None Remove="Image\FoodImage\khmer-red-curry1.jpg" />
+    <None Remove="Image\FoodImage\Laksa.jpg" />
+    <None Remove="Image\FoodImage\Laksa1.jpg" />
+    <None Remove="Image\FoodImage\larb.jpg" />
+    <None Remove="Image\FoodImage\larb1.jpg" />
+    <None Remove="Image\FoodImage\lechon.jpg" />
+    <None Remove="Image\FoodImage\Lechon1.jpg" />
+    <None Remove="Image\FoodImage\Mohinga.jpg" />
+    <None Remove="Image\FoodImage\myanmar shrimp curry.jpg" />
+    <None Remove="Image\FoodImage\myanmar shrimp curry1.jpg" />
+    <None Remove="Image\FoodImage\nan-gyi-thoke1.jpg" />
+    <None Remove="Image\FoodImage\nasi lemak1.jpg" />
+    <None Remove="Image\FoodImage\nasi rawon.jpg" />
+    <None Remove="Image\FoodImage\nasi rawon1.jpg" />
+    <None Remove="Image\FoodImage\nasi-Lemak.jpg" />
+    <None Remove="Image\FoodImage\noodle soup.jpg" />
+    <None Remove="Image\FoodImage\noodle-soup1.jpg" />
+    <None Remove="Image\FoodImage\pho1.jpg" />
+    <None Remove="Image\FoodImage\roti canai.jpg" />
+    <None Remove="Image\FoodImage\roti canai1.jpg" />
+    <None Remove="Image\FoodImage\samosa thoke.jpg" />
+    <None Remove="Image\FoodImage\Samusa-Thouk1.jpg" />
+    <None Remove="Image\FoodImage\sinigang.jpg" />
+    <None Remove="Image\FoodImage\sinigang1.jpg" />
+    <None Remove="Image\FoodImage\sop buntut.jpg" />
+    <None Remove="Image\FoodImage\sop buntut1.jpg" />
+    <None Remove="Image\FoodImage\Tandoori-Chicken1.jpg" />
+    <None Remove="Image\FoodImage\tom-yum-goong.jpg" />
+    <None Remove="Image\FoodImage\tom-yum-goong1.jpg" />
+    <None Remove="Image\FoodImage\Tondoori chicken.jpg" />
+    <None Remove="Image\FoodImage\tukir.jpg" />
+    <None Remove="Image\FoodImage\Tukir1.jpg" />
+    <None Remove="Image\FoodImage\yellow-curry.jpg" />
+    <None Remove="Image\FoodImage\yellow-curry1.jpg" />
     <None Remove="Image\Food.png" />
     <None Remove="Image\FoodBanner03.png" />
     <None Remove="Image\FoodBanner04.png" />
@@ -167,9 +239,12 @@
     <Resource Include="Image\DashboardWindow\Close.png" />
     <Resource Include="Image\DashboardWindow\Country.png" />
     <Resource Include="Image\DashboardWindow\Dashboard.png" />
+    <Resource Include="Image\DashboardWindow\excel.png" />
     <Resource Include="Image\DashboardWindow\Home.png" />
     <Resource Include="Image\DashboardWindow\logochefe.png" />
     <Resource Include="Image\DashboardWindow\Recipe.png" />
+    <Resource Include="Image\DashboardWindow\txt.png" />
+    <Resource Include="Image\DashboardWindow\word.png" />
     <Resource Include="Image\Dashbord\allFood.jpg" />
     <Resource Include="Image\Dashbord\allFood1.jpeg" />
     <Resource Include="Image\Dashbord\BannerFood.png" />
@@ -182,6 +257,75 @@
     <Resource Include="Image\Dashbord\khmer3.jpg" />
     <Resource Include="Image\Dashbord\slide1.jpg" />
     <Resource Include="Image\Dashbord\slidefood.png" />
+    <Resource Include="Image\FoodImage\adobo.jpg" />
+    <Resource Include="Image\FoodImage\adobo1.jpg" />
+    <Resource Include="Image\FoodImage\Batar-daan.jpg" />
+    <Resource Include="Image\FoodImage\batar-daan1.jpg" />
+    <Resource Include="Image\FoodImage\caril.jpg" />
+    <Resource Include="Image\FoodImage\caril1.jpg" />
+    <Resource Include="Image\FoodImage\Char-Kway-Teow-Malaysia.jpg" />
+    <Resource Include="Image\FoodImage\char-kway-teow-Malaysia1.jpg" />
+    <Resource Include="Image\FoodImage\Char-Kway-Teow-Singapore.jpg" />
+    <Resource Include="Image\FoodImage\char-kway-toew-singapore1.jpg" />
+    <Resource Include="Image\FoodImage\chilli-crab.jpg" />
+    <Resource Include="Image\FoodImage\chilli-crab1.jpg" />
+    <Resource Include="Image\FoodImage\crispy-rice-salad1.jpg" />
+    <Resource Include="Image\FoodImage\Feijoada Timorense.jpg" />
+    <Resource Include="Image\FoodImage\Feijoada Timorense1.jpg" />
+    <Resource Include="Image\FoodImage\fish head curry.jpg" />
+    <Resource Include="Image\FoodImage\Fish-Head-Curry1.jpg" />
+    <Resource Include="Image\FoodImage\goi-cuon.jpg" />
+    <Resource Include="Image\FoodImage\green-papaya-salad1.jpg" />
+    <Resource Include="Image\FoodImage\Hainanese-Chicken-Rice.jpg" />
+    <Resource Include="Image\FoodImage\Hainanese-Chicken-Rice1.jpg" />
+    <Resource Include="Image\FoodImage\Halo-Halo.jpg" />
+    <Resource Include="Image\FoodImage\Halo-Halo1.jpg" />
+    <Resource Include="Image\FoodImage\Hokkein-Mee.jpg" />
+    <Resource Include="Image\FoodImage\Hokkien-Mee1.jpg" />
+    <Resource Include="Image\FoodImage\ikan-pepes.jpg" />
+    <Resource Include="Image\FoodImage\ikan-pepes1.jpg" />
+    <Resource Include="Image\FoodImage\Indonesian_Satay.jpg" />
+    <Resource Include="Image\FoodImage\Indonesian_Satay1.jpg" />
+    <Resource Include="Image\FoodImage\Kao-Piek-sen1.jpg" />
+    <Resource Include="Image\FoodImage\kare kare.jpg" />
+    <Resource Include="Image\FoodImage\kare-kare1.jpg" />
+    <Resource Include="Image\FoodImage\khao-piak-sen.jpg" />
+    <Resource Include="Image\FoodImage\khao-soi.jpg" />
+    <Resource Include="Image\FoodImage\khmer-red-curry.jpg" />
+    <Resource Include="Image\FoodImage\khmer-red-curry1.jpg" />
+    <Resource Include="Image\FoodImage\Laksa.jpg" />
+    <Resource Include="Image\FoodImage\Laksa1.jpg" />
+    <Resource Include="Image\FoodImage\larb.jpg" />
+    <Resource Include="Image\FoodImage\larb1.jpg" />
+    <Resource Include="Image\FoodImage\lechon.jpg" />
+    <Resource Include="Image\FoodImage\Lechon1.jpg" />
+    <Resource Include="Image\FoodImage\Mohinga.jpg" />
+    <Resource Include="Image\FoodImage\myanmar shrimp curry.jpg" />
+    <Resource Include="Image\FoodImage\myanmar shrimp curry1.jpg" />
+    <Resource Include="Image\FoodImage\nan-gyi-thoke1.jpg" />
+    <Resource Include="Image\FoodImage\nasi lemak1.jpg" />
+    <Resource Include="Image\FoodImage\nasi rawon.jpg" />
+    <Resource Include="Image\FoodImage\nasi rawon1.jpg" />
+    <Resource Include="Image\FoodImage\nasi-Lemak.jpg" />
+    <Resource Include="Image\FoodImage\noodle soup.jpg" />
+    <Resource Include="Image\FoodImage\noodle-soup1.jpg" />
+    <Resource Include="Image\FoodImage\pho1.jpg" />
+    <Resource Include="Image\FoodImage\roti canai.jpg" />
+    <Resource Include="Image\FoodImage\roti canai1.jpg" />
+    <Resource Include="Image\FoodImage\samosa thoke.jpg" />
+    <Resource Include="Image\FoodImage\Samusa-Thouk1.jpg" />
+    <Resource Include="Image\FoodImage\sinigang.jpg" />
+    <Resource Include="Image\FoodImage\sinigang1.jpg" />
+    <Resource Include="Image\FoodImage\sop buntut.jpg" />
+    <Resource Include="Image\FoodImage\sop buntut1.jpg" />
+    <Resource Include="Image\FoodImage\Tandoori-Chicken1.jpg" />
+    <Resource Include="Image\FoodImage\tom-yum-goong.jpg" />
+    <Resource Include="Image\FoodImage\tom-yum-goong1.jpg" />
+    <Resource Include="Image\FoodImage\Tondoori chicken.jpg" />
+    <Resource Include="Image\FoodImage\tukir.jpg" />
+    <Resource Include="Image\FoodImage\Tukir1.jpg" />
+    <Resource Include="Image\FoodImage\yellow-curry.jpg" />
+    <Resource Include="Image\FoodImage\yellow-curry1.jpg" />
     <Resource Include="Image\Food.png" />
     <Resource Include="Image\FoodBanner03.png" />
     <Resource Include="Image\FoodBanner04.png" />
